# CLIP-Image-Retrieval-Gradio-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
Notebook for finetuning/: Finetune_CLIP_V5 (30 epoch).ipynb
Source/: README.md  app.py  clip.py  db.py  requirements.txt
Source-huggingface/: .env.example  README.md  app.py  clip.py  clusterer.py  database_utils.py  db.py  requirements.txt
docs/: architecture.md  data-flow.md
docs/plans/: v2-implementation-plan.md
scripts/: migrate_to_qdrant.py  upload_images_to_minio.py
src/: config.py  server.py
src/api/: app.py  dependencies.py
src/api/routes/: health.py  index.py  search.py
src/clip_retrieval/: __init__.py  __main__.py
src/clip_retrieval/api/: app.py  dependencies.py  schemas.py
src/clip_retrieval/api/routes/: health.py  index.py  search.py
src/clip_retrieval/core/: embedding.py  image_service.py  indexing.py  search.py
src/clip_retrieval/db/: migration.py  object_store.py  vector_store.py
src/clip_retrieval/ui/: gradio_app.py
src/core/: embedding.py  image_service.py  indexing.py  schemas.py  search.py
src/db/: migration.py  object_store.py  vector_store.py
src/ui/: gradio_app.py
tests/: conftest.py  test_api.py  test_embedding.py  test_search.py  test_vector_store.py
