[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-image-retrieval"
version = "2.0.0"
description = "CLIP-based multimodal image retrieval service with Qdrant + MinIO."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lam QUan", email = "percylam0105@gmail.com" },
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "qdrant-client>=1.12",
    "minio>=7.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gradio>=5.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "tqdm>=4.60",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
legacy = [
    "faiss-cpu>=1.7",
]

[project.scripts]
clip-retrieval = "clip_retrieval.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
